# f2-nerf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  requirements.txt  run_arsess01.sh  running_README.md
artifacts/: create_container.sh
confs/: arss01.yaml  free.yaml  llff.yaml  nerf-360.yaml  wanjinyou.yaml  wanjinyou_big.yaml
confs/dataset/: default.yaml
confs/field/: hash3d_anchored.yaml
confs/pts_sampler/: perspective.yaml
confs/renderer/: default.yaml
confs/shader/: sh_shader.yaml
confs/train/: 20k.yaml  50k.yaml
data/example/ngp_fox/: cams_meta.npy  poses_render.npy
scripts/: arsession2poses.py  colmap2poses.py  convert_custom_poses.py  eval.py  imgs2mp4.py  inter_poses.py  llff2poses.py  local_colmap_and_resize.sh  local_hloc_and_resize.sh  run.py
scripts/colmap_warpper/pycolmap/: __init__.py  scene_manager.py
scripts/hloc/: run_hloc.py
scripts/poses/: pose_utils.py
src/: Common.h  ExpRunner.cpp  ExpRunner.h
src/Dataset/: Dataset.cpp  Dataset.cu  Dataset.h  dataset.cmake
src/Field/: Field.h  FieldFactory.cpp  FieldFactory.h  Hash3DAnchored.cpp  Hash3DAnchored.cu  Hash3DAnchored.h  TCNNWP.cpp  TCNNWP.h  field.cmake
src/PtsSampler/: PersSampler.cpp  PersSampler.cu  PersSampler.h  PtsSampler.h  PtsSamplerFactory.cpp  PtsSamplerFactory.h  pts_sampler.cmake
src/Renderer/: Renderer.cpp  Renderer.cu  Renderer.h  renderer.cmake
src/Shader/: SHShader.cpp  SHShader.cu  SHShader.h  Shader.h  ShaderFactory.cpp  ShaderFactory.h  shader.cmake
src/Utils/: CameraUtils.cpp  CameraUtils.h  GlobalDataPool.cpp  GlobalDataPool.h  ImageIO.cpp  Pipe.cpp  Pipe.h  StopWatch.cpp  StopWatch.h  Utils.cpp  Utils.h  glob.cpp  glob.h  happly.h  stb_image.h  utils.cmake
src/Utils/CustomOps/: CustomOps.cpp  CustomOps.cu  CustomOps.h  FlexOps.cpp  FlexOps.cu  FlexOps.h  Scatter.cpp  Scatter.cu  Scatter.h
